--- a/package.json
+++ b/package.json
@@ -16,8 +16,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "@nuxtjs/axios": "^5.3.6",
+    "bootstrap": "^4.3.1",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "leaflet": "^1.4.0",
+    "leaflet-contextmenu": "^1.4.0",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-easyprint": "^2.1.9",
+    "leaflet-geosearch": "^2.7.0",
+    "leaflet.markercluster": "^1.4.1",
+    "leaflet.markercluster.layersupport": "^2.0.1",
+    "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
     "nuxt-buefy": "^0.3.2"
   },
