--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "leaflet-geosearch": "^2.7.0",
     "leaflet.markercluster": "^1.4.1",
     "leaflet.markercluster.layersupport": "^2.0.1",
-    "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
     "nuxt-buefy": "^0.3.2"
   },
@@ -38,8 +37,10 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "2.6.2",
     "jest": "^24.1.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.9",
     "prettier": "1.14.3",
+    "sass-loader": "^7.1.0",
     "vue-jest": "^3.0.3"
   }
 }
