--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "@nuxtjs/axios": "^5.3.6",
+    "ant-design-vue": "^1.3.6",
     "bootstrap": "^4.3.1",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
