--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development HOST=localhost nodemon server/index.js --watch server",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production HOST=10.1.1.24 node server/index.js",
+    "build": "cross-env HOST=10.1.1.24 nuxt build",
+    "start": "cross-env NODE_ENV=production  node server/index.js",
     "generate": "nuxt generate",
     "test": "jest"
   },
