--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development HOST=localhost nodemon server/index.js --watch server",
     "build": "cross-env HOST=10.1.1.24 nuxt build",
-    "start": "cross-env NODE_ENV=developement HOST='0.0.0.0' node server/index.js",
+    "start": "cross-env NODE_ENV=production HOST='10.1.1.24' node server/index.js",
     "generate": "nuxt generate",
     "test": "jest"
   },
