--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ build-backend-master:
   only: 
     - master
   script: 
+    - "kill $(netstat -nlpt|grep :80|awk '{print $7}'|awk -F'/' '{print $1}')"
     - "yarn install"
     - "yarn build"
     - "yarn start"
