--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,8 @@ build-frontend-master:
   script: 
     - env
     - "docker build -t ci/frontend:alpha ."
-    - "docker run --name frontendalpha -p 10.1.1.24:80:80 -d --rm ci/frontend:alpha"
+    - "docker stop frontendalpha && docker rm frontendalpha"
+    - "docker run --name frontendalpha -p 80:80 -d --rm ci/frontend:alpha"
   stage: build-backend-master
 stages: 
   - build-backend-master
