--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,19 @@
 --- 
-build-frontend-master: 
+build-images: 
   only: 
     - master
   script: 
-    - env
     - "docker build -t ci/frontend:alpha ."
+delete-container: 
+  only: 
+    - master
+  script: 
     - "docker stop frontendalpha && docker rm frontendalpha"
+  allow_failure: true
+run-container:
+    only :
+    - master
+  script:
     - "docker run --name frontendalpha -p 80:80 -d --rm ci/frontend:alpha"
+  allow_failure: true
+    
