--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,15 @@
+before_script:
+   - "docker stop $(docker inspect -f {{.Id}} frontendalpha)"
 build-images:
  only: 
    - master
  script: 
    - "docker build -t ci/frontend:alpha ."
  stage: 'build'
-delete-container: 
- only: 
-   - master
- script: 
-   - "docker stop frontendalpha"
- allow_failure: true
- stage: 'test'
 run-container:
  only :
    - master
  script:
-   - "docker run --name frontendalpha -p 10.1.1.2480:80 -d --rm ci/frontend:alpha"
+   - "docker run --name frontendalpha -p 10.1.1.24:80:80 -d --rm ci/frontend:alpha"
  allow_failure: true
  stage: 'deploy'
