--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 before_script:
    - "docker stop $(docker inspect -f {{.Id}} frontendalpha)"
+allow_failure: true
 build-images:
  only: 
    - master
