--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
 before_script:
    - "docker stop $(docker inspect -f {{.Id}} frontendalpha)"
-allow_failure: true
 build-images:
  only: 
    - master
  script: 
    - "docker build -t ci/frontend:alpha ."
  stage: 'build'
+ when: always
 run-container:
  only :
    - master
@@ -14,3 +14,4 @@ run-container:
    - "docker run --name frontendalpha -p 10.1.1.24:80:80 -d --rm ci/frontend:alpha"
  allow_failure: true
  stage: 'deploy'
+ when: always
