--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,14 @@
-before_script:
+stop-container:
    - "docker stop $(docker inspect -f {{.Id}} frontendalpha)"
 build-images:
  only: 
    - master
  script: 
    - "docker build -t ci/frontend:alpha ."
- stage: 'build'
  when: always
 run-container:
  only :
    - master
  script:
    - "docker run --name frontendalpha -p 10.1.1.24:80:80 -d --rm ci/frontend:alpha"
- allow_failure: true
- stage: 'deploy'
  when: always
