--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ run-container:
  only :
    - master
  before_script: 
-   - docker stop $(docker inspect -f {{.Id}} frontendalpha)
+   - docker stop frontendalpha
  script:
    - "docker run --name frontendalpha -p 10.1.1.24:80:80 -d --rm ci/frontend:alpha"
  when: always
