--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,14 +3,6 @@ build-images:
  only: 
    - master
  script: 
-   - "docker build -t ci/frontend:alpha ."
- when: always
-run-container:
- stage: "deploy"
- only :
-   - master
- before_script: 
-   - docker stop frontendalpha
- script:
-   - "docker run --name frontendalpha -p 10.1.1.24:80:80 -d --rm ci/frontend:alpha"
- when: always
+   - chmod +x deploy.sh
+   - client = forntendalpha /deploy.sh
+   
