--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "KharitaDZ",
   "version": "1.0.0",
   "description": "nuxt playground",
   "author": "yaaqoub.keddaoui",
