--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^4.3.1",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "jwt-decode": "^2.2.0",
     "leaflet": "^1.4.0",
     "leaflet-contextmenu": "^1.4.0",
     "leaflet-draw": "^1.0.4",
